# ai-db

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
ai-db/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
ai-db/docs/: API.md  business-requirements.md  phase-1-implementation.md  phase-1-inconsistencies.md  phase-2-implementation.md  technical-qa.md
ai-db/examples/: README.md
ai-db/src/ai_db/: __init__.py  api.py  config.py  exceptions.py
ai-db/src/ai_db/core/: __init__.py  ai_agent.py  ai_agent_stub.py  engine.py  models.py  query_compiler.py
ai-db/src/ai_db/storage/: __init__.py  schema_store.py  view_store.py  yaml_store.py
ai-db/src/ai_db/transaction/: __init__.py  context.py
ai-db/src/ai_db/validation/: __init__.py  constraints.py  sandbox.py  validators.py
ai-db/tests/: __init__.py  conftest.py
ai-db/tests/integration/: __init__.py  test_constraints.py  test_queries.py  test_queries_simple.py  test_transactions.py
ai-db/tests/unit/: __init__.py  test_query_compiler.py  test_storage.py  test_validation.py
ai-frontend/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-frontend/ai_frontend/: api_generator.py  core.py  skeleton_generator.py  type_generator.py  utils.py
ai-frontend/docs/: api-reference.md  architecture.md  business-requirements.md  deployment.md  phase-1-implementation.md  phase-1-inconsistencies.md  phase-1-technical-qa.md  phase-2-implementation.md
ai-frontend/examples/: basic_usage.py  with_git_layer.py
ai-frontend/src/ai_frontend/: __init__.py  api_generator.py  claude_integration.py  compiler.py  config.py  core.py  exceptions.py  skeleton_generator.py  type_generator.py  utils.py
ai-frontend/src/ai_frontend/templates/: __init__.py  gitignore
ai-frontend/tests/: __init__.py  test_config.py  test_core.py  test_type_generator.py  test_utils.py
ai-hub/: Dockerfile  README.md  pyproject.toml
ai-hub/docs/: phase-2-implementation.md
ai-hub/src/ai_hub/: __init__.py  config.py  endpoints.py  exceptions.py  main.py  models.py  service.py
ai-hub/tests/: __init__.py  conftest.py  test_config.py  test_endpoints.py  test_exceptions.py  test_integration.py  test_models.py  test_service.py
ai-shared/: README.md  pyproject.toml
ai-shared/src/ai_shared/: __init__.py  protocols.py
ai-shared/tests/: __init__.py  test_protocols.py
console/: .dockerignore  Dockerfile  README.md  console.yaml.example  pyproject.toml  setup.py
console/docs/: business-requirements.md  phase-1-implementation.md  phase-1-inconsistencies.md  phase-1-technical-qa.md  phase-2-implementation.md
console/examples/: basic_usage.py
console/src/console/: __init__.py  command_parser.py  config.py  console_interface.py  logging.py  main.py  models.py  output_formatter.py
console/tests/: __init__.py  conftest.py  test_command_parser.py  test_config.py  test_console_interface.py  test_logging.py  test_models.py  test_output_formatter.py
docker/base/: Dockerfile
docker/nginx/: nginx.conf
docs/: phase-2-decisions.md  phase-2-standardization-plan.md  phase-2-technical-qa.md
git-layer/: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
git-layer/docs/: business-requirements.md  phase-1-implementation.md  phase-1-inconsistencies.md  phase-2-implementation.md  technical-qa.md
git-layer/examples/: __init__.py  basic_usage.py
git-layer/git_layer/: __init__.py  exceptions.py
git-layer/src/git_layer/: __init__.py  config.py  exceptions.py  repository.py  transaction.py  utils.py
git-layer/tests/: __init__.py  conftest.py  test_integration.py  test_integration_async.py  test_repository.py  test_repository_async.py  test_transaction.py  test_transaction_async.py
mcp/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.sh  setup.py
mcp/docs/: business-requirements.md  phase-1-implementation.md  phase-1-inconsistencies.md  phase-1-technical-qa.md  phase-2-implementation.md
mcp/src/: __init__.py  ai_db_server.py  ai_frontend_server.py  config.py
mcp/src/ai_mcp/: __init__.py  __main__.py  ai_db_server.py  ai_frontend_server.py  config.py  permission_inference.py  protocols.py  utils.py
mcp/src/ai_mcp/mocks/: __init__.py  ai_db_mock.py  ai_frontend_mock.py  git_layer_mock.py
mcp/src/ai_mcp/models/: __init__.py  ai_db.py  ai_frontend.py
mcp/src/ai_mcp/tools/: __init__.py
mcp/src/ai_mcp/tools/ai_db/: __init__.py  base.py  introspection_tools.py  query_tools.py
mcp/src/ai_mcp/tools/ai_frontend/: __init__.py  base.py  frontend_tools.py
mcp/src/mcp/: __main__.py  permission_inference.py  protocols.py  utils.py
mcp/src/mcp/mocks/: ai_db_mock.py  ai_frontend_mock.py
mcp/src/mcp/models/: ai_db.py  ai_frontend.py
mcp/src/mcp/tools/: __init__.py
mcp/src/mcp/tools/ai_db/: __init__.py  base.py  transaction_tools.py
mcp/src/mcp/tools/ai_frontend/: frontend_tools.py
mcp/src/mocks/: __init__.py  git_layer_mock.py
mcp/src/models/: __init__.py
mcp/src/tools/ai_db/: introspection_tools.py  query_tools.py
mcp/src/tools/ai_frontend/: __init__.py
mcp/tests/: __init__.py  conftest.py
mcp/tests/integration/: __init__.py  test_ai_db_server.py  test_ai_frontend_server.py
mcp/tests/unit/: __init__.py  test_ai_db_tools.py  test_ai_frontend_tools.py  test_models.py
scripts/: healthcheck.sh  validate-all.sh
tests/integration/: __init__.py
