[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-hub"
version = "0.1.0"
description = "HTTP API server for AI-DB frontend communication"
authors = ["AI-DB Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavel-zhur/ai-db"
packages = [{include = "ai_hub", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
ai-shared = {path = "../ai-shared", develop = true}
ai-db = {path = "../ai-db", develop = true}
git-layer = {path = "../git-layer", develop = true}
fastapi = "^0.115.6"
uvicorn = "^0.31.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^0.24"
mypy = "^1.16"
ruff = "^0.12"
black = "^25.1"
testcontainers = "^4.9.0"
httpx = "^0.28.1"

[tool.poetry.scripts]
ai-hub = "ai_hub.main:main"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["tests/"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"