[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "console"
version = "0.1.0"
description = "Interactive console for AI-DB and AI-Frontend with natural language interface"
authors = ["AI-DB Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavel-zhur/ai-db"
packages = [{include = "console", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
ai-shared = {path = "../ai-shared", develop = true}
ai-db = {path = "../ai-db", develop = true}
ai-frontend = {path = "../ai-frontend", develop = true}
git-layer = {path = "../git-layer", develop = true}
rich = "^13.0.0"
pyyaml = "^6.0"
pydantic = "^2.0.0"
dependency-injector = "^4.0.0"
click = "^8.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^1.0"
pytest-cov = "^6.0"
pytest-mock = "^3.14"
mypy = "^1.16"
ruff = "^0.12"
black = "^25.1"
types-PyYAML = "^6.0"
types-tabulate = "^0.9"
types-setuptools = "^70.0"

[tool.poetry.scripts]
console = "console.main:main"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["tests/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]