[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "git-layer"
version = "0.1.0"
description = "Git-based transaction management layer for AI-DB"
authors = ["AI-DB Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavel-zhur/ai-db"
packages = [{include = "git_layer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
ai-shared = {path = "../ai-shared", develop = true}
GitPython = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^0.24"
mypy = "^1.16"
ruff = "^0.12"
black = "^25.1"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"